plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.5.1'
}

group 'org.easysoc'
version pluginVersion

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {

}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    // version and localPath should not be specified at the same time
    // version = '2021.3.3'
    localPath = "/home/itviewer/Downloads/software/idea-IC"
    sandboxDir = "/home/itviewer/IdeaProjects/plugins-sandbox"

    // plugins = ['PsiViewer:213-SNAPSHOT']
    // downloadSources false
}

runIde {
    ideDir = project.file('/home/itviewer/Downloads/software/idea-IC')
    //for jbr11
    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED','-Djdk.module.illegalAccess.silent=true'
}

patchPluginXml {
    sinceBuild = '213'
    untilBuild = '221.*'
}

buildSearchableOptions.onlyIf { false }
jarSearchableOptions.onlyIf { false }

//prepareSandbox.onlyIf { false }
